Small fix with associated documentation
Signed-off-by: Jeffrey H. Johnson <trnsz@pobox.com>

--- a/test.6
+++ b/test.6
@@ -6,7 +6,7 @@ CR ." ====================================" CR CR
 
 CR ." DO...LOOP and BEGIN...UNTIL:" CR
 11 0 DO I . LOOP CR
-10 BEGIN DUP . 1 - DUP -1 = UNTIL CR DROP
+10 BEGIN DUP . 1 - DUP 0= UNTIL . CR
 
 CR ." Arithmetic Operations: " CR
 A @ B @ + . CR
